crates/fundle/tests/proc/bundle_enum.stderr
error: expected `struct`
 --> tests/proc/bundle_enum.rs:5:1
  |
5 | enum Foo {}
  | ^^^^
